basic backend intuition